# odin-inaira

./: .gitignore  README.md
control/: setup.cfg  setup.py
control/src/inaira/: adapter.py  adapter_config.py  camera_control_adapter.py  camera_controller.py  inaira_control.py  inaira_control_adapter.py  odin_inaira.py  odin_inaira_adapter.py  sub_socket.py
control/test/config/: camera_control.cfg  inaira.cfg
control/test/static/: index.html
control/test/static/css/: odin-server.css
control/test/static/js/: frame_updater.js  live_view.js  odin_server.js
data/: CMakeLists.txt
data/cmake/: FindCppflow.cmake  FindPcoCamera.cmake  FindTensorflow.cmake
data/common/include/: InairaDefinitions.h
data/config/: CMakeLists.txt  inaira-fp-no-ml.json  inaira-fp.json  pco_camera_fp.json  pco_camera_fr.json
data/frameProcessor/: CMakeLists.txt
data/frameProcessor/include/: CMakeLists.txt  InairaMLCppflow.h  InairaMLFramework.h  InairaMLPlugin.h  InairaProcessorPlugin.h  PcoCameraProcessPlugin.h
data/frameProcessor/src/: CMakeLists.txt  InairaMLCppflow.cpp  InairaMLFramework.cpp  InairaMLPlugin.cpp  PcoCameraProcessPlugin.cpp
data/frameProcessor/test/: CMakeLists.txt
data/frameReceiver/include/: ConfigContainer.h  ParamContainer.h  PcoCameraConfiguration.h  PcoCameraDelayExposureConfig.h  PcoCameraError.h  PcoCameraLinkController.h  PcoCameraLinkFrameDecoder.h  PcoCameraStateMachine.h  PcoCameraStatus.h
data/frameReceiver/src/: CMakeLists.txt  InairaFrameDecoder.cpp  InairaFrameDecoderLib.cpp  ParamContainer.cpp  PcoCameraConfiguration.cpp  PcoCameraDelayExposureConfig.cpp  PcoCameraError.c  PcoCameraLinkController.cpp  PcoCameraLinkFrameDecoder.cpp  PcoCameraLinkFrameDecoderLib.cpp  PcoCameraStateMachine.cpp
data/frameSimulator/src/: CMakeLists.txt
data/tools/python/: .gitattributes  MANIFEST.in  setup.cfg
data/tools/python/config/: camera_config.json  model_creation.yml  producer_test.yaml  producer_test.yml
data/tools/python/src/inaira/data/: _version.py  camera_control.py  camera_emulator.py  frame_producer.py  frame_producer_config.py  model_creation.py  test.py
