[metadata]
name = inaira.data
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    click
    pyyaml
    odin_data @ git+https://github.com/odin-detector/odin-data.git@1.6.0#subdirectory=tools/python

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    frame_producer = inaira.data.frame_producer:main
    camera_control = inaira.data.camera_control:main
    camera_emulator = inaira.data.camera_emulator:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/inaira/data/_version.py
versionfile_build = inaira/data/_version.py
tag_prefix=